--- a/k8s/cd.yaml
+++ b/k8s/cd.yaml
@@ -43,7 +43,7 @@ spec:
           command: ["pwsh", "-Command", "do { Start-Sleep -Seconds 3 } until ($(try {(iwr http://xdbrefdata/healthz/ready).StatusCode -eq 200} catch { $false }));"]
       containers:
       - name: sitecore-xp1-cd
-        image: scr.sitecore.com/sxp/sitecore-xp1-cd:10.0.0-ltsc2019
+        image: 197804015172.dkr.ecr.us-east-1.amazonaws.com/sitecore-xp1-cd
         ports:
         - containerPort: 80
         env:
