--- a/k8s/init/mssql-init.yaml
+++ b/k8s/init/mssql-init.yaml
@@ -12,7 +12,7 @@ spec:
         - name: sitecore-docker-registry
       containers:
       - name: mssql-init
-        image: scr.sitecore.com/sxp/sitecore-xp1-mssql-init:10.0.0-ltsc2019
+        image: 197804015172.dkr.ecr.us-east-1.amazonaws.com/sitecore-xp1-mssql-init:latest
         env:
         - name: sitecore_admin_password
           valueFrom:
