--- a/buildspec_eks.yaml
+++ b/buildspec_eks.yaml
@@ -2,6 +2,10 @@ version: 0.2
 
 phases:
 
+  install:
+    commands:
+      - Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
+      - choco install kubernetes-cli
   pre_build:
     commands:
       - echo Logging in to Amazon EKS...
