--- a/buildspec_eks.yaml
+++ b/buildspec_eks.yaml
@@ -4,8 +4,8 @@ phases:
 
   install:
     commands:
-      - Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
-      - choco install kubernetes-cli
+      - echo y | Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
+      - echo y | choco install kubernetes-cli
   pre_build:
     commands:
       - echo Logging in to Amazon EKS...
