--- a/buildspec_eks.yaml
+++ b/buildspec_eks.yaml
@@ -20,11 +20,7 @@ phases:
       - echo check config 
       - echo check kubectl access
       - powershell.exe
-      - aws.exe configure
-      - %ACCESS_KEY%
-      - %SECRET_KEY%
-      - %REGION%
-      - %TYPE%
+      - aws.exe configure set AKIAZIMQKG43ZDWG6EMU A11x1qLa+Ql4hl3v0RXI7OL5OT1wmFLyHoQm6DH7 us-west-2 json
       - kubectl get svc
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 636494690103.dkr.ecr.us-west-2.amazonaws.com
