--- a/buildspec_eks.yaml
+++ b/buildspec_eks.yaml
@@ -1,9 +1,9 @@
 version: 0.2
 env:
   parameter-store:
-    ACCESS_KEY=access_key
-    SECRET_KEY=secret_key
-    REGION=region
+    AWS_ACCESS_KEY_ID: access_key
+    AWS_SECRET_ACCESS_KEY: secret_key
+    AWS_REGION: region
   
 phases:
 
