--- a/buildspec_eks.yaml
+++ b/buildspec_eks.yaml
@@ -23,7 +23,7 @@ phases:
       - echo check config 
       - echo check kubectl access
       - powershell.exe
-      - kubectl --version
+      - kubectl version
       - kubectl get nodes
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 636494690103.dkr.ecr.us-west-2.amazonaws.com
