--- a/buildspec_eks.yaml
+++ b/buildspec_eks.yaml
@@ -37,3 +37,5 @@ phases:
       - echo Build completed on `date`
       - kubectl apply -k ./k8s/secrets/ --kubeconfig=~/.kube/config
       - kubectl apply -f ./k8s/external/ --kubeconfig=~/.kube/config
+      - kubectl apply -f ./k8s/init/ --kubeconfig=~/.kube/config
+      - kubectl apply -f ./k8s/ --kubeconfig=~/.kube/config
