--- a/k8s/secrets/kustomization.yaml
+++ b/k8s/secrets/kustomization.yaml
@@ -4,6 +4,9 @@ secretGenerator:
 - name: sitecore-admin
   files:
   - sitecore-adminpassword.txt
+- name: smtppasswd
+  files:
+  - smtp-pass.txt
 - name: sitecore-database
   files:
   - sitecore-databaseusername.txt
