--- a/k8s/secrets/kustomization.yaml
+++ b/k8s/secrets/kustomization.yaml
@@ -4,9 +4,9 @@ secretGenerator:
 - name: sitecore-admin
   files:
   - sitecore-adminpassword.txt
-- name: smtppasswd
+- name: smtp-admin
   files:
-  - smtp-pass.txt
+  - sitecore-smtppassword.txt
 - name: sitecore-database
   files:
   - sitecore-databaseusername.txt
