--- a/k8s/xdbautomationworker.yaml
+++ b/k8s/xdbautomationworker.yaml
@@ -37,7 +37,7 @@ spec:
           command: ["pwsh", "-Command", "do { Start-Sleep -Seconds 3 } until ($(try {(iwr http://xdbsearch/healthz/ready).StatusCode -eq 200} catch { $false }));"]
       containers:
       - name: sitecore-xp1-xdbautomationworker
-        image: 197804015172.dkr.ecr.us-east-1.amazonaws.com/xdbautomationworker:latest
+        image: scr.sitecore.com/sxp/sitecore-xp1-xdbautomationworker:10.0.0-ltsc2019
         env:
         - name: Database_Server
           valueFrom:
