--- a/k8s/prc.yaml
+++ b/k8s/prc.yaml
@@ -34,7 +34,7 @@ spec:
           command: ["pwsh", "-Command", "do { Start-Sleep -Seconds 3 } until ($(try {(iwr http://xdbcollection/healthz/ready).StatusCode -eq 200} catch { $false }));"]
       containers:
       - name: sitecore-xp1-prc
-        image: 197804015172.dkr.ecr.us-east-1.amazonaws.com/sitecore-xp1-prc
+        image: scr.sitecore.com/sxp/sitecore-xp1-prc:10.0.0-ltsc2019
         ports:
         - containerPort: 80
         env:
