--- a/k8s/cortexprocessingworker.yaml
+++ b/k8s/cortexprocessingworker.yaml
@@ -27,11 +27,7 @@ spec:
     spec:
       nodeSelector:
         kubernetes.io/os: windows
-        group: sitecoreprocessing
       initContainers:
-        - name: wait-cortexprocessing
-          image: mcr.microsoft.com/powershell:lts-nanoserver-1809
-          command: ["pwsh", "-Command", "do { Start-Sleep -Seconds 3 } until ($(try {(iwr http://cortexprocessing/healthz/ready).StatusCode -eq 200} catch { $false }));"]
         - name: wait-xdbcollection
           image: mcr.microsoft.com/powershell:lts-nanoserver-1809
           command: ["pwsh", "-Command", "do { Start-Sleep -Seconds 3 } until ($(try {(iwr http://xdbcollection/healthz/ready).StatusCode -eq 200} catch { $false }));"]
@@ -40,7 +36,7 @@ spec:
           command: ["pwsh", "-Command", "do { Start-Sleep -Seconds 3 } until ($(try {(iwr http://xdbsearch/healthz/ready).StatusCode -eq 200} catch { $false }));"]
       containers:
       - name: sitecore-xp1-cortexprocessingworker
-        image: 197804015172.dkr.ecr.us-east-1.amazonaws.com/sitecore-xp1-cortexprocessingworker
+        image: sitecore-xp1-cortexprocessingworker
         env:
         - name: Database_Server
           valueFrom:
@@ -67,16 +63,6 @@ spec:
             secretKeyRef:
               name: sitecore-database
               key: sitecore-processing-engine-storage-database-password.txt
-        - name: Messaging_Database_Username
-          valueFrom:
-            secretKeyRef:
-              name: sitecore-database
-              key: sitecore-messaging-database-username.txt
-        - name: Messaging_Database_Password
-          valueFrom:
-            secretKeyRef:
-              name: sitecore-database
-              key: sitecore-messaging-database-password.txt
         - name: Reporting_Database_Username
           valueFrom:
             secretKeyRef:
@@ -96,18 +82,12 @@ spec:
           value: Data Source=$(Database_Server);Initial Catalog=Sitecore.Processing.Engine.Storage;User ID=$(Processing_Engine_Storage_Database_Username);Password=$(Processing_Engine_Storage_Database_Password);
         - name: Sitecore_ConnectionStrings_Processing.Engine.Tasks
           value: Data Source=$(Database_Server);Initial Catalog=Sitecore.Processing.Engine.Tasks;User ID=$(Processing_Engine_Tasks_Database_Username);Password=$(Processing_Engine_Tasks_Database_Password);
-        - name: Sitecore_ConnectionStrings_Processing.Webapi.Blob
-          value: http://cortexprocessing
-        - name: Sitecore_ConnectionStrings_Processing.Webapi.Table
-          value: http://cortexprocessing
         - name: Sitecore_ConnectionStrings_Xconnect.Collection
           value: http://xdbcollection
         - name: Sitecore_ConnectionStrings_Xconnect.Configuration
           value: http://xdbcollection
         - name: Sitecore_ConnectionStrings_XConnect.Search
           value: http://xdbsearch
-        - name: Sitecore_ConnectionStrings_Messaging
-          value: Data Source=$(Database_Server);Initial Catalog=Sitecore.Messaging;User ID=$(Messaging_Database_Username);Password=$(Messaging_Database_Password);
         - name: Sitecore_ConnectionStrings_Reporting
           value: Data Source=$(Database_Server);Initial Catalog=Sitecore.Reporting;User ID=$(Reporting_Database_Username);Password=$(Reporting_Database_Password);
         livenessProbe:
@@ -122,9 +102,16 @@ spec:
           exec:
             command:
             - curl
-            - http://localhost:8080/healthz/ready          
+            - http://localhost:8080/healthz/ready
           timeoutSeconds: 300
           periodSeconds: 30
           failureThreshold: 10
+        resources:
+          requests:
+            memory: 200Mi
+            cpu: 100m
+          limits:
+            memory: 1Gi
+            cpu: 300m
       imagePullSecrets:
       - name: sitecore-docker-registry
