--- a/k8s/cortexprocessingworker.yaml
+++ b/k8s/cortexprocessingworker.yaml
@@ -36,7 +36,7 @@ spec:
           command: ["pwsh", "-Command", "do { Start-Sleep -Seconds 3 } until ($(try {(iwr http://xdbsearch/healthz/ready).StatusCode -eq 200} catch { $false }));"]
       containers:
       - name: sitecore-xp1-cortexprocessingworker
-        image: sitecore-xp1-cortexprocessingworker
+        image: 197804015172.dkr.ecr.us-east-1.amazonaws.com/sitecore-xp1-cortexprocessingworker
         env:
         - name: Database_Server
           valueFrom:
