--- a/k8s/prc.yaml
+++ b/k8s/prc.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+\apiVersion: v1
 kind: Service
 metadata:
   name: prc
@@ -27,7 +27,6 @@ spec:
     spec:
       nodeSelector:
         kubernetes.io/os: windows
-        group: sitecoreprocessing
       initContainers:
         - name: wait-xdbcollection
           image: mcr.microsoft.com/powershell:lts-nanoserver-1809
@@ -133,6 +132,11 @@ spec:
           value: Data Source=$(Database_Server);Initial Catalog=Sitecore.Reporting;User ID=$(Reporting_Database_Username);Password=$(Reporting_Database_Password);
         - name: Sitecore_ConnectionStrings_XConnect.Collection
           value: http://xdbcollection
+        - name: MEDIA_REQUEST_PROTECTION_SHARED_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: sitecore-protect-media-requests
+              key: sitecore-media-request-protection-shared-secret.txt
         livenessProbe:
           httpGet:
             path: /healthz/live
@@ -153,5 +157,12 @@ spec:
           timeoutSeconds: 300
           periodSeconds: 30
           failureThreshold: 10
+        resources:
+          requests:
+            memory: 500Mi
+            cpu: 200m
+          limits:
+            memory: 1.5Gi
+            cpu: 500m
       imagePullSecrets:
       - name: sitecore-docker-registry
