--- a/k8s/xdbautomationrpt.yaml
+++ b/k8s/xdbautomationrpt.yaml
@@ -27,7 +27,6 @@ spec:
     spec:
       nodeSelector:
         kubernetes.io/os: windows
-        group: sitecoreprocessing
       containers:
       - name: sitecore-xp1-xdbautomationrpt
         image: 197804015172.dkr.ecr.us-east-1.amazonaws.com/sitecore-xp1-xdbautomationprt
@@ -88,5 +87,12 @@ spec:
           timeoutSeconds: 300
           periodSeconds: 30
           failureThreshold: 10
+        resources:
+          requests:
+            memory: 500Mi
+            cpu: 50m
+          limits:
+            memory: 1Gi
+            cpu: 200m
       imagePullSecrets:
       - name: sitecore-docker-registry
