--- a/k8s/xdbautomationworker.yaml
+++ b/k8s/xdbautomationworker.yaml
@@ -27,7 +27,6 @@ spec:
     spec:
       nodeSelector:
         kubernetes.io/os: windows
-        group: sitecoreprocessing
       initContainers:
         - name: wait-xdbcollection
           image: mcr.microsoft.com/powershell:lts-nanoserver-1809
@@ -105,5 +104,12 @@ spec:
           timeoutSeconds: 300
           periodSeconds: 30
           failureThreshold: 10
+        resources:
+          requests:
+            memory: 200Mi
+            cpu: 20m
+          limits:
+            memory: 1Gi
+            cpu: 200m
       imagePullSecrets:
       - name: sitecore-docker-registry
