--- a/k8s/xdbsearchworker.yaml
+++ b/k8s/xdbsearchworker.yaml
@@ -27,7 +27,6 @@ spec:
     spec:
       nodeSelector:
         kubernetes.io/os: windows
-        group: sitecoreprocessing
       containers:
       - name: sitecore-xp1-xdbsearchworker
         image: 197804015172.dkr.ecr.us-east-1.amazonaws.com/sitecore-xp1-xdbsearchworker
@@ -81,5 +80,12 @@ spec:
           timeoutSeconds: 300
           periodSeconds: 30
           failureThreshold: 10
+        resources:
+          requests:
+            memory: 400Mi
+            cpu: 50m
+          limits:
+            memory: 1Gi
+            cpu: 300m
       imagePullSecrets:
       - name: sitecore-docker-registry
